@@ -1,3 +1,7 @@
+2008-10-29  Perry McFarlane  <perry_m@fastmail.fm>
+* afile.[ch], atari.c, sio.c:  Support .pro images
+
+
 2008-10-13  Matthias Reichl  <hias@horus.com>
 * pokey.c: fixed the ALLPOT register - it didn't work
   and there was an access outside array bounds
